RESOLVED FIXED28720
[V8] Fix Canvas layout test failures in Chromium build.
https://bugs.webkit.org/show_bug.cgi?id=28720
Summary [V8] Fix Canvas layout test failures in Chromium build.
Jian Li
Reported 2009-08-25 15:22:55 PDT
Fix Canvas layout test failures in Chromium build. The previous fix r47757 does not handle the V8 object conversion correctly.
Attachments
Proposed Patch (2.98 KB, patch)
2009-08-25 15:26 PDT, Jian Li
levin: review+
jianli: commit-queue-
Jian Li
Comment 1 2009-08-25 15:26:49 PDT
Created attachment 38571 [details] Proposed Patch
David Levin
Comment 2 2009-08-25 15:32:06 PDT
Comment on attachment 38571 [details] Proposed Patch > diff --git a/WebCore/bindings/v8/custom/V8DocumentCustom.cpp b/WebCore/bindings/v8/custom/V8DocumentCustom.cpp > + ASSERT(false); Use ASSERT_NOT_REACHED(); > } // namespace WebCore > diff --git a/WebCore/bindings/v8/custom/V8HTMLCanvasElementCustom.cpp b/WebCore/bindings/v8/custom/V8HTMLCanvasElementCustom.cpp > + ASSERT(false); Use ASSERT_NOT_REACHED();
Jian Li
Comment 3 2009-08-25 15:39:41 PDT
Note You need to log in before you can comment on or make changes to this bug.