[V8] Fix Canvas layout test failures in Chromium build. https://bugs.webkit.org/show_bug.cgi?id=28720

Reviewed by David Levin.

The previous fix r47757 does not handle the V8 object conversion correctly.

* bindings/v8/custom/V8DocumentCustom.cpp:
(WebCore::CALLBACK_FUNC_DECL):
* bindings/v8/custom/V8HTMLCanvasElementCustom.cpp:
(WebCore::CALLBACK_FUNC_DECL):

git-svn-id: svn://svn.chromium.org/blink/trunk@47758 bbb929c8-8fbe-4397-9dbb-9b2b20218538