third_party/WebKit/WebCore/bindings/v8/custom/V8DocumentCustom.cpp
@@ -32,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "config.h"
 #include "Document.h"
 
+#include "CanvasRenderingContext.h"
 #include "ExceptionCode.h"
 #include "Node.h"
 #include "XPathNSResolver.h"
@@ -94,7 +95,13 @@ CALLBACK_FUNC_DECL(DocumentGetCSSCanvasContext)
     int width = toInt32(args[2]);
     int height = toInt32(args[3]);
     CanvasRenderingContext* result = imp->getCSSCanvasContext(contextId, name, width, height);
-    return V8DOMWrapper::convertToV8Object(V8ClassIndex::CANVASRENDERINGCONTEXT, result);
+    if (result->is2d())
+        return V8DOMWrapper::convertToV8Object(V8ClassIndex::CANVASRENDERINGCONTEXT2D, result);
+    else {
+        // FIXME: Add the conversion to CanvasRenderingContext3D when it is hooked up.
+        ASSERT_NOT_REACHED();
+        return v8::Handle<v8::Value>();
+    }
 }
 
 } // namespace WebCore
